objects/EUR_CRM_Service_Pack_Item__c.object
<CustomObject>
    <description>PREU Data model</description>
    <fields>
        <fullName>EUR_CRM_Activation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Activity_Rotation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LT - Activation</description>
        <label>Activity - Rotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Bar_Styling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bar Styling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Brand_Event__c</fullName>
        <label>Brand Events (per year)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Drinks_Menu_First_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drinks Menu - First Page</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Drinks_Menu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Drinks Menu</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Events__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LT - Activation</description>
        <label>Events</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Glorifier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Glorifier</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Activity__c</fullName>
        <label>Image Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Image_Menu__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Menu Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_In_Store_Promotions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In-Store Promotions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_KAI__c</fullName>
        <label>KAI</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Material__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Material</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Others_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Others</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Others__c</fullName>
        <label>Others</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Presence__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Promo_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LT - Activation</description>
        <label>Promo Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Rotation_Activity__c</fullName>
        <label>Rotation Activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Service_Pack__c</fullName>
        <label>Service Pack</label>
        <referenceTo>EUR_CRM_Service_Pack__c</referenceTo>
        <relationshipName>EUR_CRM_Service_Pack_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Signature_drink__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Signature drink</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Staff_Uniform__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staff Uniform</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Staff_incentive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staff incentive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Staff_training__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Staff training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sub_family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand\Quality</label>
        <referenceTo>EUR_CRM_Quality__c</referenceTo>
        <relationshipName>EUR_CRM_Service_Pack_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Tasting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tasting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Venue_Styling__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LT - Visibility</description>
        <label>Venue Styling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_VisibilityBar__c</fullName>
        <defaultValue>false</defaultValue>
        <description>LT - Visibility</description>
        <label>Visibility - Bar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visibility_Bar__c</fullName>
        <label>Bar Visibility</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visibility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visibility</label>
        <type>Checkbox</type>
    </fields>
    <label>Service Pack Item (EU)</label>
    <nameField>
        <displayFormat>SPI-{0000}</displayFormat>
        <label>Nº Service Pack Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Pack Items (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_AO_Service_Pack_Item</fullName>
        <active>true</active>
        <label>EUR AO Service Pack Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Service_Pack_Item</fullName>
        <active>true</active>
        <label>EUR DE Service Pack Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_EE_Service_Pack_Item</fullName>
        <active>true</active>
        <label>EUR EE Service Pack Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_KE_Service_Pack_Item</fullName>
        <active>true</active>
        <label>EUR KE Service Pack Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LT_Service_Pack_Item</fullName>
        <active>true</active>
        <label>EUR LT Service Pack Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_LV_Service_Pack_Item</fullName>
        <active>true</active>
        <label>EUR LV Service Pack Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PRT_ServicePackItem</fullName>
        <active>true</active>
        <label>EUR_PRT_ServicePackItem</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>